# tafor

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  alembic.ini  config.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  setup.py
alembic/: env.py
alembic/versions/: 336df6ecd4bc_initialize_database.py  5d79cb3d6019_standardized_table_structure.py  b86e34a4f7f6_remove_redundant_columns_from_trend_.py
docs/: Makefile  conf.py  faq.rst  feature.md  guide.rst  index.rst  install.rst  interface.rst  intro.rst  make.bat
docs/_templates/: links.html
docs/api/: aftn.rst  check.rst  message.rst  utils.rst  validator.rst
scripts/: Procfile  fill_field.py  fir_boundaries.json  requirements.txt  tafor.py
scripts/api/: auth.py  requirements.txt  tafor.py
scripts/config/: boundary.json
scripts/mock/: server.py
scripts/tafcov/: cov.py
scripts/templates/: index.html
tafor/: __init__.py  __main__.py  config.py  globals.py  main.py  models.py  preference.py  schedule.py  send.py  services.py  setting.py  settings.py  states.py  styles.py  taf.py  task.py  test.py  utils.py  validate.py  validator.py  widgets.py
tafor/app/: __init__.py  main.py
tafor/components/: __init__.py  chart.py  send.py  setting.py  sigmet.py  taf.py  task.py  trend.py
tafor/core/: __init__.py  config.py  globals.py  (+3 more)
tests/: __init__.py  conftest.py  context.py  mocks.py  requirements.txt  test_cli.py  test_models.py  test_requirements.txt  test_setting.py  test_settingdialog.py  test_taf.py  test_trend.py  test_utils.py  test_validator.py
(+254 files in other folders)
